Fix(dashboard): Spacing between tables

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,7 +57,6 @@ html, body {
 
 h1 {
   color: $primary;
-  margin-bottom: .5em;
 }
 
 .dashboard-header-link {
